--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "fracty": "^1.0.11",
     "vue": "^2.6.14",
+    "vue-router": "^4.1.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -21,6 +24,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.54.4",
+    "sass-loader": "^10.3.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
