--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "firebase": "^9.9.3",
     "fracty": "^1.0.11",
+    "uniqid": "^5.4.0",
     "vue": "^2.6.14",
     "vue-router": "^4.1.3",
     "vuex": "^3.6.2"
