--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.7.0",
-    "@vuelidate/core": "^2.0.0-alpha.44",
-    "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "firebase": "^9.9.3",
@@ -19,6 +17,7 @@
     "uniqid": "^5.4.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.4",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
