--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@vue/composition-api": "^1.7.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
     "firebase": "^9.9.3",
     "fracty": "^1.0.11",
